Refactoring protocol buffer name and encoding file - FileBox becomes a DirNode - encoding functions encode/decode become encode_{str2bin, bin2str}

--- a/user/Makefile
+++ b/user/Makefile
@@ -6,10 +6,10 @@ ucafs: main.cc $(OBJS)
 %.o: %.cc %.h
 	$(CXX) $(CPPFLAGS) $(INCFLAGS) -c $< -o $@
 
-filebox.o: filebox.cc filebox.h fbox.pb.cc
+dirnode.o: dirnode.cc dirnode.h dnode.pb.cc
 	$(CXX) $(CPPFLAGS) $(INCFLAGS) -c $< -o $@
 
-fbox.pb.cc: fbox.proto
+dnode.pb.cc: dnode.proto
 	protoc --cpp_out=./ $^
 
 .PHONY: clean
