--- a/user/tests/Makefile
+++ b/user/tests/Makefile
@@ -4,6 +4,7 @@ TEST_LIBS = $(patsubst -L%, -L../%, $(LIBS))
 TEST_OBJS = $(patsubst %.o, ../%.o, $(OBJS))
 
 PROGS = test_filebox\
+	test_dops\
 	test_crypto
 
 tests: $(PROGS)
@@ -12,15 +13,15 @@ tests: $(PROGS)
 build:
 	cd ../ && make && cd tests
 
-ucafs.a: build $(TEST_OBJS)
-	ar cr $@ $(wordlist 2, $(words $^), $^)
+libucafs.a: build ../libucafs.a
+	cp -u $(wordlist 2, $(words $^), $^) $@
 
 define make-test-target
-$(1): $(1).cc ucafs.a
-	$(CXX) $$(CPPFLAGS) $$(EXTRA_FLAGS) $(1).cc ucafs.a $$(TEST_LIBS) -o $(1)
+$(1): $(1).cc libucafs.a
+	$(CXX) $$(CPPFLAGS) $$(EXTRA_FLAGS) $(1).cc libucafs.a $$(TEST_LIBS) -o $(1)
 endef
 
 $(foreach element,$(PROGS),$(eval $(call make-test-target,$(element))))
 
 clean:
-	rm -rf *.fbox ucafs.a $(PROGS)
+	rm -rf *.dnode libucafs.a $(PROGS)
