refactored dnode.cc to self-containment

--- a/user/Makefile
+++ b/user/Makefile
@@ -11,6 +11,15 @@ RXGEN = $(OPENAFS_SRC)/rxgen/rxgen
 RXINC := -I$(OPENAFS_INC)
 RXLIBS := -L$(OPENAFS_LIB) -lrx -llwp
 
+define make-test-target
+$(1): $(1).cc libucafs.a
+	@$(CXX) $$(CPPFLAGS) -I./ $$(INCFLAGS) $(1).cc libucafs.a $$(LIBS) -o $(1)
+	@echo "CXX <= $(1)"
+endef
+
+$(foreach element,$(TESTS),$(eval $(call make-test-target,tests/$(element))))
+tests: $(addprefix tests/, $(TESTS))
+
 ucafs: main.cc libucafs.a
 	$(CXX) $(CPPFLAGS) -I../common $^ $(LIBS) $(RXLIBS) -o $@
 
