PARTIAL: sending file content to userspace

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,10 +1,14 @@
 COMMONPATH = ../common
-OPENAFS_SRC_AFS = ~/openafs/src/afs
+OPENAFS_PATH = ~/openafs
+OPENAFS_SRC = ~/openafs/src
+OPENAFS_SRC_AFS = $(OPENAFS_SRC)/afs
 CC := clang
 SRC = afsx.h \
       afsx.cs.c \
       afs_secure.h \
       afs_secure.c
+
+RXGEN = $(OPENAFS_SRC)/rxgen/rxgen
 
 INC_FLAGS = #-L/usr/local/include
 LIB_FLAGS= -L$(OPENAFS_LIB_PATH)
@@ -15,10 +19,10 @@ RXLIBS = -lrx\
 
 all: afsx.cs.c afsx.h
 afsx.cs.c: $(COMMONPATH)/afsx.xg
-	rxgen -A -x -C -o $@ $^
+	$(RXGEN) -A -x -C -o $@ $^
 
 afsx.h: $(COMMONPATH)/afsx.xg
-	rxgen -A -x -h -o $@ $^
+	$(RXGEN) -A -x -h -o $@ $^
 
 .PHONY: copy
 copy:
@@ -27,3 +31,9 @@ copy:
 .PHONY: clean
 clean:
 	cd $(OPENAFS_SRC_AFS) && rm -f $(SRC)
+
+
+.PHONY: diff
+diff:
+	cd ${OPENAFS_PATH} && git diff > ${PWD}/openafs.afsx.patch
+
