--- a/user/tests/Makefile
+++ b/user/tests/Makefile
@@ -1,7 +1,10 @@
 include ../header.mk
 
-all:
+all: reset
 	make -C ../ tests
+
+reset:
+	rm -rf repo/* && rm -rf repo/.afsx/*
 
 clean:
 	rm -rf *.dnode libucafs.a $(TESTS)
