--- a/user/Makefile
+++ b/user/Makefile
@@ -50,7 +50,7 @@ afsx.ss.o: afsx.ss.c
 afsx.ss.c: afsx.xg afsx.h
 	$(RXGEN) -A -x -S -o $@ $<
 
-afsx.h: afsx.xg afsx_hdr.h
+afsx.h: afsx.xg ucafs_defs.h
 	$(RXGEN) -A -x -h -o $@ $<
 
 third/libthird.a:
