Adding uc_store.c to for userspace processing of storing

--- a/user/tests/Makefile
+++ b/user/tests/Makefile
@@ -6,7 +6,7 @@ include $(UCAFS_DIR)/sgx_defs.mk
 
 LIBS += $(App_Link_Flags) -lgtest -lgtest_main -ltcmalloc
 
-TESTS = test_dirops test_dcache
+TESTS = test_fetchstore test_dirops test_dcache
 
 all: clean tests
 
