[bad] more dirops implemented, cleanup required

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,4 +1,5 @@
 USER_DIR := ../user
+OPENAFS_PATH = ~/openafs
 OPENAFS_DIR := ~/openafs/src/afs
 FILES := ucafs_mod.c\
 	ucafs_kern.c\
@@ -18,3 +19,7 @@ ucafs_header.h: $(USER_DIR)/ucafs_header.h
 install: ucafs_header.h ucafs_env.h
 	@cp -u $(FILES) $(OPENAFS_DIR)
 	@echo "install: $(FILES)"
+
+.PHONY: diff
+diff:
+	cd ${OPENAFS_PATH} && git diff > ${PWD}/openafs.afsx.patch
