Tested store/fetch, minor issue with flush

--- a/module/Makefile
+++ b/module/Makefile
@@ -3,8 +3,8 @@ OPENAFS_PATH = ~/openafs
 OPENAFS_DIR := ~/openafs/src/afs
 FILES := ucafs_mod.c\
 	ucafs_kern.c\
-	ucafs_fetch.c\
-	ucafs_store.c\
+	ucafs_kern_fetch.c\
+	ucafs_kern_store.c\
 	ucafs_mod.h\
 	ucafs_kern.h\
 	ucafs_env.h\
