fixed issue with GLOCK deadlock

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,11 +1,12 @@
 USER_DIR := ../user
 OPENAFS_PATH = ~/openafs
 OPENAFS_DIR := ~/openafs/src/afs
-FILES := ucafs_mod.c\
+FILES := \
 	ucafs_kern.c\
+	ucafs_kern_mod.c\
 	ucafs_kern_fetch.c\
 	ucafs_kern_store.c\
-	ucafs_mod.h\
+	ucafs_module.h\
 	ucafs_kern.h\
 	ucafs_env.h\
 	ucafs_header.h
