renaming superblock to supernode

--- a/user/Makefile
+++ b/user/Makefile
@@ -23,7 +23,7 @@ copyconfig:
 cryptolib: copyconfig
 	cd mbedtls/library && make clean && make SHARED=t
 
-admin_ucafs: admin_ucafs.c uc_superblock.o libthird.a
+admin_ucafs: admin_ucafs.c uc_supernode.o libthird.a
 	$(CC) $(App_C_Flags) $^ -pthread -luuid -o $@
 
 enclave_u.c: sgx/enclave.edl
