initializing enclave complete

--- a/user/Makefile
+++ b/user/Makefile
@@ -21,10 +21,11 @@ copyconfig:
 	cp mbedtls-config.h mbedtls/include/mbedtls/config.h
 
 cryptolib: copyconfig
-	cd mbedtls/library && make clean && make SHARED=t
+	cd mbedtls/library && make clean && make SHARED=t DEBUG=t
 
-admin_ucafs: admin_ucafs.c uc_supernode.o libthird.a
-	$(CC) $(App_C_Flags) $^ -pthread -luuid -o $@
+admin_ucafs: admin_ucafs.c uc_supernode.o enclave_u.o libthird.a
+	@$(CC) $(FLAGS) $(App_C_Flags) $^ $(App_Link_Flags) -pthread -luuid -lmbedcrypto -o $@
+	@echo "GEN => $@"
 
 enclave_u.c: sgx/enclave.edl
 	@$(SGX_EDGER8R) --untrusted --untrusted-dir ./ $^
