--- a/user/sgx/Makefile
+++ b/user/sgx/Makefile
@@ -3,10 +3,9 @@ include header.mk
 CC=gcc
 
 APP_PATH = ..
-OBJS = uc_ecalls.o\
-	   uc_sgx_store.o\
+OBJS = uc_sgx_main.o\
+	   uc_sgx_fetchstore.o\
 	   uc_sgx_auth.o\
-	   uc_crypto.o\
 	   elasticarray.o\
 	   elasticqueue.o\
 	   seqptrmap.o
